crates/escalier/tests/errors/index_out_of_bounds.error
Error: Index out of bounds
   ╭─[<unknown>:1:13]
   │
 1 │ let tuple = [5, "hello", true];
   ·             ─────────┬────────  
   ·                      ╰────────── for this tuple
   · 
 3 │ let out_of_bounds = tuple[3];
   ·                           ┬  
   ·                           ╰── 3 is out of bounds
───╯
